Wrote functionality to loop through various lambda values and also to calculate the training time

--- a/Experiment.ipynb
+++ b/Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,8 @@
     "from scipy.optimize import minimize\n",
     "from scipy.io import loadmat\n",
     "from math import sqrt\n",
-    "import random"
+    "import random\n",
+    "import datetime"
    ]
   },
   {
@@ -561,6 +562,36 @@
     "\n",
     "#print('\\n Test set Accuracy:' + str(100 * np.mean((predicted_label == test_label).astype(float))) + '%')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test[42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_set = [0,4,8,12,16,20]\n",
+    "tr_acc = []\n",
+    "train_time = []\n",
+    "for lamb in lambda_set:\n",
+    " lambda_val=lamb\n",
+    " tr_acc.append(lamb)\n",
+    "\n",
+    "start_time=datetime.datetime.now()\n",
+    "end_time=datetime.datetime.now()\n",
+    "time_diff=end_time-start_time\n",
+    "micro_sec = time_diff.seconds*1000000+time_diff.microseconds\n",
+    "train_time.append(micro_sec)\n",
+    "\n",
+    "print(\"test\"+repr(train_time))"
    ]
   },
   {
